force-app/main/default/objects/Offer_Log__c.object
<CustomObject>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Offer Logs</relationshipLabel>
        <relationshipName>Offer_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Offer Logs</relationshipLabel>
        <relationshipName>Offer_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARNING</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Offer Log</label>
    <nameField>
        <displayFormat>OL-{00000}</displayFormat>
        <label>Offer Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>